feat(rfq): use native asset amount limits
